fixed comma problem as well as hidden overflow

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -145,6 +145,8 @@ button:hover {
   font-family: "Cormorant", serif;
 }
 
-#footer {
-  background-color: darkgray;
+footer {
+  background-color: rgb(247, 239, 230);
 }
+
+
